# rivu

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/classifiers/: classifier.rs
src/classifiers/attribute_class_observers/: attribute_class_observer.rs  gaussian_numeric_attribute_class_observer.rs  nominal_attribute_class_observer.rs  null_attribute_class_observer.rs
src/classifiers/bayes/: naive_bayes.rs
src/classifiers/hoeffding_tree/: hoeffding_tree.rs
src/classifiers/hoeffding_tree/instance_conditional_test/: instance_conditional_test.rs  nominal_attribute_binary_test.rs  nominal_attribute_multiway_test.rs  numeric_attribute_binary_test.rs
src/classifiers/hoeffding_tree/nodes/: node.rs  split_node.rs
src/classifiers/hoeffding_tree/nodes/learning_nodes/: active_learning_node.rs  inactive_learning_node.rs
src/classifiers/hoeffding_tree/split_criteria/: gini_split_criterion.rs  split_criterion.rs
src/core/: instance_header.rs
src/core/attributes/: attribute.rs  nominal_attribute.rs  numeric_attribute.rs
src/core/estimators/: gaussian_estimator.rs
src/evaluation/: mod.rs
src/evaluation/preview/: snapshot.rs
src/streams/arff/: arff_file_stream.rs  parser.rs
src/tasks/: prequential_evaluator.rs
src/testing/dummies/: classifier_none_votes.rs
src/testing/spies/: train_spy_classifier.rs
src/testing/stubs/: oracle_classifier.rs
src/ui/cli/: args.rs  mod.rs
src/ui/cli/wizard/: wizard.rs
src/ui/types/choices/: schema.rs  stream_choice.rs  task_choice.rs
src/utils/: memory.rs  mod.rs
(+2 files in other folders)
