[package]
name = "rivu"
version = "0.2.2"
edition = "2024"
license = "AGPL-3"
repository = "https://github.com/gustavo-munhoz/rivu"
description = "A MOA-inspired project to optimize Naive Bayes and Hoeffding Trees algorithms with a rust implementation."

[features]
test-support = []

[dependencies]
tempfile = "3.20.0"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.145" , features = ["preserve_order"]}
schemars = "1.0.4"
strum = "0.27.2"
strum_macros = "0.27.2"
inquire = "0.9.1"
anyhow = "1.0.100"
thiserror = "2.0.16"
chrono = "0.4.42"
libm = "0.2.15"
cpu-time = "1.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.175"
mach2 = "0.5.0"
